FIX: Make hobbies more readable

--- a/style.css
+++ b/style.css
@@ -181,5 +181,5 @@ div.organization {
 
 div.hobbies li {
     list-style: none;
-    display: inline-table;
+    display: block;
 }
